fixed overflow of messages into dashboard component

--- a/server/client/src/components/channel/channel.css
+++ b/server/client/src/components/channel/channel.css
@@ -2,7 +2,6 @@
 
 .row{
   width: 100%;
-  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: row;
 }
-
- 
