--- a/server/client/src/components/channel/dashboard/dashboard.css
+++ b/server/client/src/components/channel/dashboard/dashboard.css
@@ -10,10 +10,16 @@
   padding: 0;
   display: flex;
   flex-direction: column;
+  min-width: 220px;
 
 }
 
 .dashboard-message{
   display: flex;
   flex-direction: column;
+}
+
+.message-display-add{
+  display: flex;
+  justify-content: space-between;
 }
